--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="assessment">
+
 <head>
     <meta charset="UTF-8">
     <title>Front End Assessment</title>
     <link rel="stylesheet" href="./styles/app.css">
+    <link rel="stylesheet" href="./styles/master.css">
 </head>
-<body>
-<!--This div wraps the entire page-->
+
+<body ng-controller='mainCtrl'>
+    <!--This div wraps the entire page-->
     <div class="site-wrapper">
         <!--Here is your header with the navigation nested inside -->
         <header class="site-header" role="banner">
             <div class="container">
-              <!--Insert Logo directive here -->
+                <!--Insert Logo directive here -->
+                <logo></logo>
                 <nav class="site-nav">
                     <ul class="primary-nav">
                         <!-- Navs go here -->
+                        <a ui-sref="home">home</a>
+                        <a ui-sref="about">about</a>
+                        <a ui-sref="blog">blog</a>
+                        <a ui-sref="shop">shop</a>
                     </ul>
                 </nav>
                 <button class="hamburger toggle-nav js-toggle-nav" ng-click="showNav">
@@ -27,15 +35,24 @@
         <!--This is the main wrapper -->
         <main class="site-main" role="main">
 
-        <!--Views go here -->
+            <!--Views go here -->
+            <ui-view></ui-view>
 
         </main>
-        </div>
+    </div>
 
 
-<!--ADD ALL YOUR SCRIPTS HERE -->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
+    <!--ADD ALL YOUR SCRIPTS HERE -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
+    <script src="js/app.js" charset="utf-8"></script>
+    <script src="js/mainCtrl.js" charset="utf-8"></script>
+    <script src="js/mainSrvc.js" charset="utf-8"></script>
+
+    <script src="js/components/logoComp/logoComp.js" charset="utf-8"></script>
+    <script src="js/components/shopComponent/shopComponent.js" charset="utf-8"></script>
 </body>
+
 </html>
