--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <nav class="site-nav">
                     <ul class="primary-nav">
                         <!-- Navs go here -->
-                        <a ui-sref="home">home</a>
-                        <a ui-sref="about">about</a>
-                        <a ui-sref="blog">blog</a>
-                        <a ui-sref="shop">shop</a>
+                        <li><a ui-sref="home">home</a></li>
+                        <li><a ui-sref="about">about</a></li>
+                        <li><a ui-sref="blog">blog</a></li>
+                        <li><a ui-sref="shop">shop</a></li>
                     </ul>
                 </nav>
                 <button class="hamburger toggle-nav js-toggle-nav" ng-click="showNav">
